--- a/local.yml
+++ b/local.yml
@@ -7,4 +7,6 @@
   tasks:
     - include: tasks/zsh-setup.yml
     - include: tasks/node-setup.yml
+    - include: tasks/nvim-setup.yml
+    - include: tasks/dotfiles.yml
 
